--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-title: [Zhendong Wang]
-description: [Software Engineering Researcher]
+theme: jekyll-theme-minimal
+title: Zhendong Wang
+description: Software Engineering Researcher
+logo:
+show_downloads: false
