--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: Zhendong Wang
 description: Software Engineering Researcher
-logo:
+logo: https://github.com/zhendow/zhendow.github.io/blob/main/resources/Headshot.jpeg
 show_downloads: false
