--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: Zhendong Wang
-description: Software Engineering Researcher \n zhendow[at]uci[dot]edu
+description: Software Engineering Researcher | zhendow[at]uci[dot]edu
 logo: https://github.com/zhendow/zhendow.github.io/blob/main/resources/Headshot.jpeg?raw=true
 show_downloads: false
